Changelog
=========

3.3.1 (unreleased)
------------------

- Use document byline also on mail.
  [mathias.leimgruber]

- OGQuickUploadCapableFileFactory: Set default values before adding content to container.
  (Prevents values set by handlers on ObjectAddedEvent to be overwritten again).
  [lgraf]

- Implement document metadata behavor on mail (incl. Upgrade step and init event).
  [mathias.leimgruber]

- Refactored document overview.
  [lgraf]

- Fixed outdated profile versions for og.base:default and og.examplecontent:default.
  [lgraf]

- Monkey patch DexterityContent.__getattr__.
  This is required to support dynamic lookup of schema-level default values for
  fields in behaviors. It basically is a backport of this Dexterity 2.x fix:
  https://github.com/plone/plone.dexterity/commit/dd491480b869bbe21ee50ef413c263705af7b170
  [lgraf]

- Use IDocumentNameFromTitle behavior from document also for mail.
  [mathias.leimgruber]

- Fix double journal entries using quickupload.
  [mathias.leimgruber]

- Test quickupload: Replace mock tests by functional tests.
  [mathias.leimgruber]

- Implement tabbedview for ftw.mail.mail content (Preview / Journal / Info).
  [mathias.leimgruber]

- Added public-trial-column to document tab.
  [lknoepfel]

- Added public_trial index and metadata field.
  [lknoepfel]

- Public trial is no longer a restricted vocab. It behaves like a regular one.
  New default is "unchecked".
  [mathias.leimgruber]

- Enforce correct order in inbox-task-tab tests.
  [lknoepfel]

- Added limited-public option for public trial.
  [lknoepfel]

- Refactored some hard to change test data.
  [lgraf]

- Document: Refactor behaviors to be a package with separate modules.
  [lgraf]

3.3 (2014-06-05)
----------------

- Added initial implementation for setting DocProperties when creating
  a document from template.
  [lgraf]

- Fixed zipexport-enable upgrade step to match the new registry entry.