@@ -74,4 +74,14 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <!-- 2200 -> 2201 -->
+    <genericsetup:upgradeStep
+        title="Add classification behavior"
+        description=""
+        source="2200"
+        destination="2201"
+        handler="opengever.mail.upgrades.to2201.AddClassifiactionBehavior"
+        profile="opengever.mail:default"
+        />
+
 </configure>
